ballOutcome probability chenged